--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   web:
-    image: nailyy/hello-react:latest
+    image: nailyy/docker-react:latest
     container_name: web
     restart: unless-stopped
     ports:
